package com.hotel;

public class PaymentManager {
    
}
