@startuml HotelSystemClassDiagram
' Title
title Hotel Booking System - Class Diagram

' Packages (logical grouping)
package "Core" {
  class HotelSystem {
 
  }

  class Main {
    + main(args): void
  }
}


  class UserManager {
    - users: Map<String,User>
    + addUser(user): void
    + authenticateUser(email,password): User
    + getUser(id): User
    + getUsersByRole(role): List<User>
  }

  class PaymentManager {
    - payments: Map<String,Payment>
    + createPayment(bookingId, amount, method): Payment
    + processPayment(paymentId): boolean
    + refundPayment(paymentId): boolean
    + getPaymentsByBooking(bookingId): List<Payment>
    + getPaymentStatistics(): Map
  }
}

package "Model" {
  abstract class User {
    - userId: String
    - name: String
    - email: String
    - phone: String
    - password: String
    - role: UserRole
    + validatePassword(pw): boolean
    + getPermissions(): String
    + hasPermission(permission): boolean
  }
  class Admin
  class ReceptionStaff
  class Manager
  class Cleaner
  class Guest {
    - bookingHistory: List<String>
    - returningGuest: boolean
    - paymentMethod: PaymentMethod
    + addBooking(bookingId): void
    + getBookingHistory(): List<String>
  }

  abstract class Room {
    - roomNumber: String
    - roomType: RoomType
    - basePrice: double
    - status: RoomStatus
    - capacity: int
    + calculatePrice(nights): double
    + calculatePrice(nights, includeBreakfast): double
    + updateStatus(status): void
  }
  class StandardRoom
  class SuperiorRoom
  class SuiteRoom

  class Payment {
    - paymentId: String
    - bookingId: String
    - amount: double
    - method: PaymentMethod
    - status: PaymentStatus
    - transactionId: String
    - createdAt: LocalDateTime
    - updatedAt: LocalDateTime
    + processPayment(): boolean
    + fail(txnId): boolean
    + refund(): boolean
    + generateInvoice(): String
  }

  enum UserRole
  enum RoomType
  enum RoomStatus
  enum BookingStatus
  enum PaymentMethod
  enum PaymentStatus
}

' Relationships
HotelSystem --> User : currentUser
Main --> HotelSystem : uses

Guest -- Booking : "0..*" : bookings
Booking --> Room : references
Booking --> Guest : references
Payment --> Booking : references

Room <|-- StandardRoom
Room <|-- SuperiorRoom
Room <|-- SuiteRoom

User <|-- Admin
User <|-- ReceptionStaff
User <|-- Manager
User <|-- Cleaner
User <|-- Guest

@enduml

